// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots AppSidebar should show app sidebar 1`] = `
<span>
  <div
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "width": "65px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "#192534",
          "display": "flex",
          "flex": "1",
          "flexDirection": "column",
          "justifyContent": "center",
          "padding": "1rem 0 0 0",
          "textAlign": "center",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": "1rem",
          }
        }
      >
        <svg
          height="100%"
          style={
            Object {
              "fill": "#fff",
              "height": "27px",
              "width": "27px",
            }
          }
          version="1.1"
          viewBox="0 0 16 16"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            className="white"
          >
            <path
              d="M14.8975838,11.6596673 C15.0341387,11.7226127 15.0341387,11.8255895 14.8975838,11.8885349 L8.24833642,14.9528456 C8.11178147,15.015791 7.88821853,15.015791 7.75166358,14.9528456 L1.10241622,11.8885349 C0.965861261,11.8255895 0.965861261,11.7226127 1.10241622,11.6596673 L2.6950287,10.9257049 C2.83158366,10.8627595 3.0550919,10.8627595 3.19170155,10.9257049 L7.75166358,13.0271856 C7.88821853,13.090131 8.11178147,13.090131 8.24833642,13.0271856 L12.8082985,10.9257049 C12.9449081,10.8627595 13.1684163,10.8627595 13.3049713,10.9257049 L14.8975838,11.6596673 Z M14.8975838,7.88556618 C15.0341387,7.94851162 15.0341387,8.05154307 14.8975838,8.1144885 L8.24833642,11.1787445 C8.11178147,11.2416899 7.88821853,11.2416899 7.75166358,11.1787445 L1.10241622,8.1144885 C0.965861261,8.05154307 0.965861261,7.94851162 1.10241622,7.88556618 L2.6950287,7.1516585 C2.83158366,7.08871306 3.0550919,7.08871306 3.19170155,7.1516585 L7.75166358,9.25308448 C7.88821853,9.31602991 8.11178147,9.31602991 8.24833642,9.25308448 L12.8082985,7.1516585 C12.9449081,7.08871306 13.1684163,7.08871306 13.3049713,7.1516585 L14.8975838,7.88556618 Z M1.10241622,4.34038738 C0.965861261,4.27744195 0.965861261,4.17446518 1.10241622,4.11151975 L7.75166358,1.04720908 C7.88821853,0.984263641 8.11178147,0.984263641 8.24833642,1.04720908 L14.8975838,4.11151975 C15.0341387,4.17446518 15.0341387,4.27744195 14.8975838,4.34038738 L8.24833642,7.40469806 C8.11178147,7.46764349 7.88821853,7.46764349 7.75166358,7.40469806 L1.10241622,4.34038738 Z"
            />
          </g>
        </svg>
      </div>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "#168eea",
            "border": 0,
            "borderRadius": "0.126rem",
            "color": "white",
            "cursor": "pointer",
            "display": "block",
            "margin": "16px 16px 16px 16px",
            "padding": "6px",
            "position": "relative",
          }
        }
      >
        <svg
          height="100%"
          style={
            Object {
              "fill": "#fff",
              "height": "20px",
              "width": "20px",
            }
          }
          version="1.1"
          viewBox="0 0 16 16"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            className="white"
          >
            <path
              d="M16,0 L12,14.5116279 L6.58066667,9.73664271 L11.782,4.30533615 L4.81,9.07240592 L0,7.9154334 L16,0 Z M5.95348837,11.1627907 L5.95348837,16 L8.18604651,13.0766947 L5.95348837,11.1627907 Z"
            />
          </g>
        </svg>
        <div
          style={
            Object {
              "background": "#2E435E",
              "borderRadius": "0.126rem",
              "boxShadow": "0 1px 2px 0 rgba(0,0,0,0.50)",
              "color": "#fff",
              "display": "none",
              "left": "100%",
              "marginLeft": "10px",
              "padding": ".25rem .75rem",
              "position": "absolute",
              "top": "3px",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            style={
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "transparent",
                "borderBottomWidth": 7,
                "borderLeftColor": "transparent",
                "borderLeftWidth": 0,
                "borderRightColor": "#2E435E",
                "borderRightWidth": 8,
                "borderStyle": "solid",
                "borderTopColor": "transparent",
                "borderTopWidth": 7,
                "height": 0,
                "left": -7,
                "position": "absolute",
                "top": ".42rem",
                "width": 0,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#fff",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Publish
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "border": 0,
            "borderRadius": "0.126rem",
            "cursor": "pointer",
            "display": "block",
            "margin": "16px 16px 16px 16px",
            "padding": "6px",
            "position": "relative",
          }
        }
      >
        <svg
          height="100%"
          style={
            Object {
              "fill": "#7088A5",
              "height": "20px",
              "width": "20px",
            }
          }
          version="1.1"
          viewBox="0 0 16 16"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            className="sidebarIcon"
          >
            <g
              transform="translate(8.066952, 8.472268) rotate(-45.000000) translate(-8.066952, -8.472268) translate(0.066952, 1.972268)"
            >
              <path
                d="M0.0215566657,3.31257555 C0.0215566657,3.03718605 0.238778853,2.81393875 0.523178151,2.81393875 L10.4217198,2.81393875 L10.4217197,0.427889852 C10.4217197,0.149934187 10.5821386,0.0844435872 10.7695555,0.271180514 L15.63441,5.11838601 C15.8265144,5.3097935 15.7566205,5.46495993 15.4870722,5.46495993 L0.516730268,5.46495988 C0.243253439,5.46495988 0.0215566657,5.23893531 0.0215566657,4.96632308 L0.0215566657,3.31257555 Z"
              />
              <path
                d="M15.984894,9.45772119 C15.984894,9.73311069 15.7676718,9.95635798 15.4832725,9.95635798 L5.58473083,9.95635798 L5.58473093,12.3996933 C5.58473094,12.6753679 5.42431198,12.7374758 5.23689513,12.5489472 L0.372040608,7.65523588 C0.179936192,7.46199196 0.249830113,7.30533681 0.519378395,7.30533681 L15.4897204,7.30533686 C15.7631972,7.30533686 15.984894,7.53136143 15.984894,7.80397365 L15.984894,9.45772119 Z"
              />
            </g>
          </g>
        </svg>
        <div
          style={
            Object {
              "background": "#2E435E",
              "borderRadius": "0.126rem",
              "boxShadow": "0 1px 2px 0 rgba(0,0,0,0.50)",
              "color": "#fff",
              "display": "none",
              "left": "100%",
              "marginLeft": "10px",
              "padding": ".25rem .75rem",
              "position": "absolute",
              "top": "3px",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            style={
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "transparent",
                "borderBottomWidth": 7,
                "borderLeftColor": "transparent",
                "borderLeftWidth": 0,
                "borderRightColor": "#2E435E",
                "borderRightWidth": 8,
                "borderStyle": "solid",
                "borderTopColor": "transparent",
                "borderTopWidth": 7,
                "height": 0,
                "left": -7,
                "position": "absolute",
                "top": ".42rem",
                "width": 0,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#fff",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Reply
          </span>
        </div>
      </button>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "border": 0,
            "borderRadius": "0.126rem",
            "cursor": "pointer",
            "display": "block",
            "margin": "16px 16px 16px 16px",
            "padding": "6px",
            "position": "relative",
          }
        }
      >
        <svg
          height="100%"
          style={
            Object {
              "fill": "#7088A5",
              "height": "20px",
              "width": "20px",
            }
          }
          version="1.1"
          viewBox="0 0 16 16"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            className="sidebarIcon"
          >
            <polygon
              fillRule="nonzero"
              points="11.3146503 9.57492875 15.4856547 1.64892397 14.069743 0.903810408 10.4735244 7.73757125 4.65360704 6.38869876 0.735225826 14.342021 2.1704915 15.0491366 5.52821115 8.23381544"
            />
            <path
              d="M1.45454545,16 C0.651222182,16 0,15.3487778 0,14.5454545 C0,13.7421313 0.651222182,13.0909091 1.45454545,13.0909091 C2.25786873,13.0909091 2.90909091,13.7421313 2.90909091,14.5454545 C2.90909091,15.3487778 2.25786873,16 1.45454545,16 Z M5.09090909,8.72727273 C4.28758582,8.72727273 3.63636364,8.07605055 3.63636364,7.27272727 C3.63636364,6.469404 4.28758582,5.81818182 5.09090909,5.81818182 C5.89423236,5.81818182 6.54545455,6.469404 6.54545455,7.27272727 C6.54545455,8.07605055 5.89423236,8.72727273 5.09090909,8.72727273 Z M10.9090909,10.1818182 C10.1057676,10.1818182 9.45454545,9.530596 9.45454545,8.72727273 C9.45454545,7.92394945 10.1057676,7.27272727 10.9090909,7.27272727 C11.7124142,7.27272727 12.3636364,7.92394945 12.3636364,8.72727273 C12.3636364,9.530596 11.7124142,10.1818182 10.9090909,10.1818182 Z M14.5454545,2.90909091 C13.7421313,2.90909091 13.0909091,2.25786873 13.0909091,1.45454545 C13.0909091,0.651222182 13.7421313,0 14.5454545,0 C15.3487778,0 16,0.651222182 16,1.45454545 C16,2.25786873 15.3487778,2.90909091 14.5454545,2.90909091 Z"
            />
          </g>
        </svg>
        <div
          style={
            Object {
              "background": "#2E435E",
              "borderRadius": "0.126rem",
              "boxShadow": "0 1px 2px 0 rgba(0,0,0,0.50)",
              "color": "#fff",
              "display": "none",
              "left": "100%",
              "marginLeft": "10px",
              "padding": ".25rem .75rem",
              "position": "absolute",
              "top": "3px",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            style={
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "transparent",
                "borderBottomWidth": 7,
                "borderLeftColor": "transparent",
                "borderLeftWidth": 0,
                "borderRightColor": "#2E435E",
                "borderRightWidth": 8,
                "borderStyle": "solid",
                "borderTopColor": "transparent",
                "borderTopWidth": 7,
                "height": 0,
                "left": -7,
                "position": "absolute",
                "top": ".42rem",
                "width": 0,
              }
            }
          />
          <span
            style={
              Object {
                "color": "#fff",
                "fontFamily": "\\"Open Sans\\", sans-serif",
                "fontSize": "0.8rem",
                "fontWeight": 400,
              }
            }
          >
            Analyze (Coming Soon)
          </span>
        </div>
      </button>
      <div
        style={
          Object {
            "marginTop": "auto",
          }
        }
      >
        <button
          aria-expanded={false}
          aria-haspopup={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "background": "none",
              "border": 0,
              "borderRadius": "0.126rem",
              "cursor": "pointer",
              "display": "block",
              "margin": "16px 16px 16px 16px",
              "padding": "6px",
              "position": "relative",
            }
          }
        >
          <svg
            height="100%"
            style={
              Object {
                "fill": "#7088A5",
                "height": "20px",
                "width": "20px",
              }
            }
            version="1.1"
            viewBox="0 0 16 16"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <g
              className="sidebarIcon"
            >
              <path
                d="M15.6779554,2.42770277 C15.8852289,2.9116277 16,3.44468369 16,4.00457656 C16,6.21624313 14.209139,8.00915312 12,8.00915312 C11.4417517,8.00915312 10.9102135,7.89466322 10.427534,7.68785764 L2.54993413,15.5654575 C1.96757782,16.1478138 1.02469502,16.1491172 0.434824591,15.5592467 C-0.150961847,14.9734603 -0.146964313,14.0197153 0.428613784,13.4441372 L8.31287775,5.55987323 C8.11138988,5.08169812 8,4.55616047 8,4.00457656 C8,1.79291 9.790861,2.22044605e-16 12,2.22044605e-16 C12.559976,2.22044605e-16 13.0930765,0.115199686 13.5769462,0.323218319 C13.524899,0.363059242 13.4748722,0.406790595 13.427256,0.454406852 L12.7044065,1.17725634 C12.1303527,1.75131015 12.1248734,2.70653695 12.7106598,3.29232339 C13.3005302,3.88219382 14.243394,3.88090952 14.8257268,3.29857669 L15.5485763,2.5757272 C15.5955069,2.5287966 15.6386374,2.47931841 15.6779554,2.42770277 Z"
              />
            </g>
          </svg>
        </button>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots Popover default 1`] = `
<span>
  <div
    style={
      Object {
        "margin": "2rem",
        "overflow": "visible",
        "position": "relative",
        "width": "100px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "#2E435E",
          "borderRadius": "0.126rem",
          "boxShadow": "0 1px 2px 0 rgba(0,0,0,0.50)",
          "color": "#fff",
          "display": "inline-block",
          "left": "100%",
          "marginLeft": 0,
          "padding": ".25rem .75rem",
          "position": "absolute",
          "top": 0,
          "whiteSpace": "nowrap",
        }
      }
    >
      <span
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "transparent",
            "borderBottomWidth": 7,
            "borderLeftColor": "transparent",
            "borderLeftWidth": 0,
            "borderRightColor": "#2E435E",
            "borderRightWidth": 8,
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopWidth": 7,
            "height": 0,
            "left": -7,
            "position": "absolute",
            "top": ".42rem",
            "width": 0,
          }
        }
      />
      <span
        style={
          Object {
            "color": "#fff",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "0.8rem",
            "fontWeight": 400,
          }
        }
      >
        <div
          style={
            Object {
              "width": "auto",
            }
          }
        >
          Hello, world!
        </div>
      </span>
    </div>
  </div>
</span>
`;
